[package]
name = "merkle_tree_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.6"
hex = "0.4.3"
libc = "0.2.139"
sscanf = "0.4.0"
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28"
rayon = "1.7.0"